--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    item 1
+                </li>
+                <li>
+                    item 2
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
